# docent-investigation-skill

./: .gitignore  CHANGELOG.md  PRE_REGISTRATION.md  PRE_REGISTRATION_BASELINE_RECALL.md  PRE_REGISTRATION_EXTRAS_ADJUDICATION.md  PRE_REGISTRATION_JUDGE_VALIDATION.md  PRE_REGISTRATION_STEP4_RECALL.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs/plans/: IMPLEMENTATION_PLAN.md  NODE_N0_PROMPT.md
docs/publication/: preprint-protocol-draft.md
docs/verification/: N0.md  N1.md  N2.md  N3.md  N4.md  N5.md  N6.md
plugins/docent-investigation/: .mcp.json
reports/: INVESTIGATION_REPORT.md  JUDGE_VALIDATION_REPORT.md  baseline_recall_results.json  extras_adjudication_results.json  extras_blind_labels.json  human_labels.json  judge_validation.json  labeled_rows.json  sample_manifest.json  utboost-oracle-sensitivity.md
scripts/: adjudicate_extras.py  compute_extras_results.py  fetch_traces.py  label_runs.py  one_run_thread.py  run_baseline_recall.py  run_investigation.py  run_judge_validation.py  run_step4_recall.py  sample_extras_adjudication.py  write_manifest.py
src/docent_investigation/: __init__.py  anchor.py  batch.py  docent_client.py  fidelity.py  gap3_baseline.py  gap3_extras.py  gap3_ingest.py  gap3_pipeline.py  gap3_scoring.py  (+5 more)
tests/: test_anchor.py  test_batch.py  test_docent_client.py  test_extras_adjudication.py  test_fidelity.py  test_gap3_scoring.py  test_gap3_scrub.py  test_gap3_step4.py  test_metadata_canary.py  test_plugin_sanity.py  test_rater_blindness.py  test_transform.py  test_validation.py
tools/: plugin_sanity.py
(+6 files in other folders)
