[project]
name = "docent-investigation-skill"
version = "0.1.0"
description = "A Claude Code skill that drives an honest behavioral investigation on Docent."
requires-python = ">=3.11"
dependencies = ["docent>=0.1.74"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docent_investigation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tools"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
